--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-AU"
-title                    : "Zhou XU / ZXmicroscopy"
+title                    : "Zhou XU "
 title_separator          : "-"
 name                     : &name "Zhou XU"
 description              : &description "personal description"
@@ -22,7 +22,7 @@ repository               : "imbalence.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Zhou XU"
+  name             : "Zhou XU / 徐洲"
   pronouns         : "he/him"
   bio              : "Electron Microscopist / maker"
   location         : "Mlbourne, Australia"
@@ -33,21 +33,21 @@ author:
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com.au/citations?user=S0zGEcEAAAAJ&hl=en"
-  impactstory      : # URL
+  # impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-7599-1166"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/IMBalENce"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  # bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
