Add more contents and adjust the structure

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Zhou XU "
   pronouns         : "he/him"
-  bio              : "Electron Microscopist / maker"
+  bio              : "Electron microscope scientist | Maker "
   location         : "Mlbourne, Australia"
-  employer         : "Monash Centre for Electron Microscopy"
+  employer         : "Monash University"
   uri              : # URL
   email            : "zhou.xu@monash.edu" 
 
