--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /talks/    
     
   - title: "Portfolio"
-    url: /portfolio/
+    url: https://scholar.google.com.au/citations?user=S0zGEcEAAAAJ&hl=en
         
   - title: "Blog Posts"
     url: /year-archive/
